// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Golden Snapshot Tests Ink output for agon-terminal.kern 1`] = `
"import React, { useState } from 'react';
import { Box, Text } from 'ink';
import Spinner from 'ink-spinner';

export default function AgonTerminal() {
  const [busy, setBusy] = useState(false);

  return (
    <Box flexDirection="column">
      <Text>
        {"AGON".split('').map((ch: string, i: number) => {
          const colors = [208,214,220,226,228,230,255] as number[];
          const colorIdx = Math.floor((i / 4) * colors.length);
          const color = String(colors[Math.min(colorIdx, colors.length - 1)]);
          return <Text key={i} color={color}>{ch}</Text>;
        })}
      </Text>
      <Box borderStyle="round" borderColor="214">
        <Text bold>{"Any AI can join. They compete. You ship."}</Text>
      </Box>
      <Text dimColor>{'────────────────────────────────────────────────'}</Text>
      <Text color="#a1a1aa">{"Engines ready:"}</Text>
      <Text bold color="#f97316">{"  claude  codex  gemini"}</Text>
      <Text dimColor>{'────────────────────────────────────────────────'}</Text>
      {busy && (
        <>
          <Text>
            <Spinner color="214" />
            {' Dispatching engines...'}
          </Text>
          <Box>
            <Text color="214">{'▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓'}</Text>
            <Text>{'░░░░░'}</Text>
            <Text>{' 75%'}</Text>
          </Box>
        </>
      )}
      <Text dimColor>{'────────────────────────────────────────────────'}</Text>
      <Text bold>{"Forge Results:"}</Text>
      <Box flexDirection="column">
        <Text bold>{"Forge Scoreboard"}</Text>
        <Text bold color="green">{'Winner: claude'}</Text>
        <Box>
          <Text dimColor>{"Score:"}</Text>
          <Text>{' '}{([89,74,71] as string[]).join(' | ')}</Text>
        </Box>
        <Box>
          <Text dimColor>{"Diff:"}</Text>
          <Text>{' '}{([436,570,317] as string[]).join(' | ')}</Text>
        </Box>
        <Box>
          <Text dimColor>{"Time:"}</Text>
          <Text>{' '}{([45s,52s,38s] as string[]).join(' | ')}</Text>
        </Box>
      </Box>
    </Box>
  );
}"
`;

exports[`Golden Snapshot Tests Terminal output for agon-terminal.kern 1`] = `
"// ── ANSI helpers ──────────────────────────────────────────────────────
const ESC = '\\x1b[';
const RESET = ESC + '0m';
let _activeSpinner = null;

function hexTo256(hex) {
  const r = parseInt(hex.slice(1, 3), 16);
  const g = parseInt(hex.slice(3, 5), 16);
  const b = parseInt(hex.slice(5, 7), 16);
  return 16 + 36 * Math.round(r / 255 * 5) + 6 * Math.round(g / 255 * 5) + Math.round(b / 255 * 5);
}

function ansiColor(c) {
  if (typeof c === 'number') return ESC + '38;5;' + c + 'm';
  if (typeof c === 'string' && c.startsWith('#')) return ESC + '38;5;' + hexTo256(c) + 'm';
  const named = {
    red: '31', green: '32', yellow: '33', blue: '34',
    cyan: '36', magenta: '35', white: '37', dim: '2', bold: '1', italic: '3',
  };
  return ESC + (named[c] || '37') + 'm';
}

function ansiBg(c) {
  if (typeof c === 'number') return ESC + '48;5;' + c + 'm';
  if (typeof c === 'string' && c.startsWith('#')) return ESC + '48;5;' + hexTo256(c) + 'm';
  const named = {
    red: '41', green: '42', yellow: '43', blue: '44',
    cyan: '46', magenta: '45', white: '47',
  };
  return ESC + (named[c] || '47') + 'm';
}

function style(text, opts) {
  let prefix = '';
  if (opts.bold) prefix += ESC + '1m';
  if (opts.dim) prefix += ESC + '2m';
  if (opts.italic) prefix += ESC + '3m';
  if (opts.color !== undefined) prefix += ansiColor(opts.color);
  if (opts.bg !== undefined) prefix += ansiBg(opts.bg);
  return prefix + text + RESET;
}

function separator(width) {
  return style('─'.repeat(width || 48), { dim: true });
}

function table(headers, rows, colWidths) {
  const widths = colWidths || headers.map((h, i) => Math.max(h.length, ...rows.map(r => (r[i] || '').length)) + 2);
  const pad = (s, w) => s + ' '.repeat(Math.max(0, w - s.length));
  const lines = [];
  lines.push(headers.map((h, i) => style(pad(h, widths[i]), { bold: true })).join(''));
  lines.push(style('─'.repeat(widths.reduce((a, b) => a + b, 0)), { dim: true }));
  for (const row of rows) {
    lines.push(row.map((c, i) => pad(c, widths[i])).join(''));
  }
  return lines.join('\\n');
}

function box(content, color, width) {
  color = color || 'white';
  width = width || 50;
  const lines = content.split('\\n');
  const inner = width - 4;
  const top = style('┌' + '─'.repeat(inner + 2) + '┐', { color });
  const bot = style('└' + '─'.repeat(inner + 2) + '┘', { color });
  const mid = lines.map(l => {
    const padded = l + ' '.repeat(Math.max(0, inner - l.length));
    return style('│ ', { color }) + padded + style(' │', { color });
  });
  return [top, ...mid, bot].join('\\n');
}

function gradient(text, colors) {
  if (!colors || colors.length === 0) return text;
  return text.split('').map((ch, i) => {
    const colorIdx = Math.floor((i / text.length) * colors.length);
    return ansiColor(colors[Math.min(colorIdx, colors.length - 1)]) + ch;
  }).join('') + RESET;
}

function spinner(message, color) {
  color = color || 'white';
  const frames = ['⠋','⠙','⠹','⠸','⠼','⠴','⠦','⠧','⠇','⠏'];
  let i = 0;
  let interval;
  const s = {
    start() {
      _activeSpinner = s;
      interval = setInterval(() => {
        process.stdout.write('\\r' + ansiColor(color) + frames[i % frames.length] + RESET + ' ' + message);
        i++;
      }, 80);
    },
    stop(finalMsg) {
      clearInterval(interval);
      _activeSpinner = null;
      process.stdout.write('\\r' + ' '.repeat(message.length + 4) + '\\r');
      if (finalMsg) console.log(finalMsg);
    },
  };
  return s;
}

function progressBar(value, max, width, color) {
  width = width || 20;
  color = color || 'green';
  const pct = Math.min(1, Math.max(0, value / max));
  const filled = Math.round(pct * width);
  const empty = width - filled;
  return ansiColor(color) + '▓'.repeat(filled) + RESET + '░'.repeat(empty) + \` \${Math.round(pct * 100)}%\`;
}

process.on('SIGINT', () => { if (_activeSpinner) _activeSpinner.stop(); process.exit(0); });

// ── State ──────────────────────────────────────────────
let busy = false;

// ── Core ───────────────────────────────────────────────
{busy && null}

// ── Output ─────────────────────────────────────────────
console.log(gradient("AGON", [208,214,220,226,228,230,255]));
console.log(box("Any AI can join. They compete. You ship.", "214", 50));
console.log(separator(48));
console.log(style("Engines ready:", { color: "#a1a1aa" }));
console.log(style("  claude  codex  gemini", { color: "#f97316", bold: true }));
console.log(separator(48));
console.log(separator(48));
console.log(style("Forge Results:", { bold: true }));
console.log(style("Forge Scoreboard", { bold: true }));
console.log(style('Winner: claude', { color: 'green', bold: true }));
console.log('  ' + style('Score:', { dim: true }) + ' ' + [89,74,71].join(' | '));
console.log('  ' + style('Diff:', { dim: true }) + ' ' + [436,570,317].join(' | '));
console.log('  ' + style('Time:', { dim: true }) + ' ' + [45s,52s,38s].join(' | '));
"
`;

exports[`Golden Snapshot Tests Terminal output for interactive.kern 1`] = `
"// ── ANSI helpers ──────────────────────────────────────────────────────
const ESC = '\\x1b[';
const RESET = ESC + '0m';
let _activeSpinner = null;

function hexTo256(hex) {
  const r = parseInt(hex.slice(1, 3), 16);
  const g = parseInt(hex.slice(3, 5), 16);
  const b = parseInt(hex.slice(5, 7), 16);
  return 16 + 36 * Math.round(r / 255 * 5) + 6 * Math.round(g / 255 * 5) + Math.round(b / 255 * 5);
}

function ansiColor(c) {
  if (typeof c === 'number') return ESC + '38;5;' + c + 'm';
  if (typeof c === 'string' && c.startsWith('#')) return ESC + '38;5;' + hexTo256(c) + 'm';
  const named = {
    red: '31', green: '32', yellow: '33', blue: '34',
    cyan: '36', magenta: '35', white: '37', dim: '2', bold: '1', italic: '3',
  };
  return ESC + (named[c] || '37') + 'm';
}

function ansiBg(c) {
  if (typeof c === 'number') return ESC + '48;5;' + c + 'm';
  if (typeof c === 'string' && c.startsWith('#')) return ESC + '48;5;' + hexTo256(c) + 'm';
  const named = {
    red: '41', green: '42', yellow: '43', blue: '44',
    cyan: '46', magenta: '45', white: '47',
  };
  return ESC + (named[c] || '47') + 'm';
}

function style(text, opts) {
  let prefix = '';
  if (opts.bold) prefix += ESC + '1m';
  if (opts.dim) prefix += ESC + '2m';
  if (opts.italic) prefix += ESC + '3m';
  if (opts.color !== undefined) prefix += ansiColor(opts.color);
  if (opts.bg !== undefined) prefix += ansiBg(opts.bg);
  return prefix + text + RESET;
}

function separator(width) {
  return style('─'.repeat(width || 48), { dim: true });
}

function table(headers, rows, colWidths) {
  const widths = colWidths || headers.map((h, i) => Math.max(h.length, ...rows.map(r => (r[i] || '').length)) + 2);
  const pad = (s, w) => s + ' '.repeat(Math.max(0, w - s.length));
  const lines = [];
  lines.push(headers.map((h, i) => style(pad(h, widths[i]), { bold: true })).join(''));
  lines.push(style('─'.repeat(widths.reduce((a, b) => a + b, 0)), { dim: true }));
  for (const row of rows) {
    lines.push(row.map((c, i) => pad(c, widths[i])).join(''));
  }
  return lines.join('\\n');
}

function box(content, color, width) {
  color = color || 'white';
  width = width || 50;
  const lines = content.split('\\n');
  const inner = width - 4;
  const top = style('┌' + '─'.repeat(inner + 2) + '┐', { color });
  const bot = style('└' + '─'.repeat(inner + 2) + '┘', { color });
  const mid = lines.map(l => {
    const padded = l + ' '.repeat(Math.max(0, inner - l.length));
    return style('│ ', { color }) + padded + style(' │', { color });
  });
  return [top, ...mid, bot].join('\\n');
}

function gradient(text, colors) {
  if (!colors || colors.length === 0) return text;
  return text.split('').map((ch, i) => {
    const colorIdx = Math.floor((i / text.length) * colors.length);
    return ansiColor(colors[Math.min(colorIdx, colors.length - 1)]) + ch;
  }).join('') + RESET;
}

function spinner(message, color) {
  color = color || 'white';
  const frames = ['⠋','⠙','⠹','⠸','⠼','⠴','⠦','⠧','⠇','⠏'];
  let i = 0;
  let interval;
  const s = {
    start() {
      _activeSpinner = s;
      interval = setInterval(() => {
        process.stdout.write('\\r' + ansiColor(color) + frames[i % frames.length] + RESET + ' ' + message);
        i++;
      }, 80);
    },
    stop(finalMsg) {
      clearInterval(interval);
      _activeSpinner = null;
      process.stdout.write('\\r' + ' '.repeat(message.length + 4) + '\\r');
      if (finalMsg) console.log(finalMsg);
    },
  };
  return s;
}

function progressBar(value, max, width, color) {
  width = width || 20;
  color = color || 'green';
  const pct = Math.min(1, Math.max(0, value / max));
  const filled = Math.round(pct * width);
  const empty = width - filled;
  return ansiColor(color) + '▓'.repeat(filled) + RESET + '░'.repeat(empty) + \` \${Math.round(pct * 100)}%\`;
}

process.on('SIGINT', () => { if (_activeSpinner) _activeSpinner.stop(); process.exit(0); });

// ── State ──────────────────────────────────────────────
let query = ;
let loading = true;
let items = '[object Object]';
let filteredItems = '[object Object]';

// ── Output ─────────────────────────────────────────────
console.log(style("Search Inventory", { color: "#18181b", bold: true }));
console.log(style("Type a name to filter the live results.", { color: "#52525b" }));
console.log(style({"__expr":true,"code":"loading ? \\"Refreshing...\\" : (filteredItems.length + \\" matches\\")"}, { color: "#18181b" }));
console.log(style({"__expr":true,"code":"query.length > 0 ? \\"Filter: \\" + query : \\"All items\\""}, { color: "#71717a" }));
{!loading && null}
"
`;
